ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tg-notify-webhook
  namespace: default
  annotations:
    #nginx.ingress.kubernetes.io/whitelist-source-range: "149.154.160.0/20,91.108.4.0/22"

    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
#  tls:
#    - hosts:
#        - tg-notify.company.com
#      secretName: tg-notify-tls
  rules:
    - http:
        paths:
          - path: "/api/v1/telegram/updates"
            pathType: Prefix
            backend:
              service:
                name: notification-telegram
                port:
                  number: 9090
